<resources>
    <string name="app_name">Virtual Art!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="share">Share</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <string name="facebook_app_id">918028724919981</string>
    <string name="Welcome">Welcome to Virtual Art!</string>

</resources>
